--- a/cluster/apps/collab/vikunja/config-map.yaml
+++ b/cluster/apps/collab/vikunja/config-map.yaml
@@ -29,7 +29,7 @@ data:
         # A list of enabled providers    
         providers:
           # The name of the provider as it will appear in the frontend.      
-          - name: vikunja
+          - name: authentik
             # The auth url to send users to if they want to authenticate using OpenID Connect.
             authurl: https://id.holthome.net/application/o/vikunja/
             # The client ID used to authenticate Vikunja at the OpenID Connect provider.
