add vikunja files to code too

--- a/cluster/apps/collab/vikunja/kustomization.yaml
+++ b/cluster/apps/collab/vikunja/kustomization.yaml
@@ -4,4 +4,5 @@ kind: Kustomization
 resources:
   - config-map.yaml
   - vikunja-postgresql-pvc.yaml
+  - vikunja-files-pvc.yaml
   - helm-release.yaml
