--- a/cluster/apps/network/blocky/helm-release.yaml
+++ b/cluster/apps/network/blocky/helm-release.yaml
@@ -64,6 +64,7 @@ spec:
       conditional:
         mapping:
           ${SECRET_DOMAIN}: udp:${GATEWAY_IP}
+          unifi.: udp:${GATEWAY_IP}
       blocking:
         blackLists:
           ads:
