update amcrest address

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -67,15 +67,15 @@ stringData:
   SECRET_YOURLS_MYSQL_ROOT_PASSWORD: ENC[AES256_GCM,data:MEja513S2tEaQqphVery/oZYPPGigHJe,iv:IRAQ8RUb0235I9vPfmp2ROmSG7+VpTI1BMh2yQ4bU9c=,tag:xNqJoV/mAT0mqb/+A0qjqA==,type:str]
   SECRET_AMCREST2MQTT_AMCREST_USERNAME: ENC[AES256_GCM,data:WngFHsg=,iv:uIIC+tyRQOoI7CEKpLJIphb3EZYCgEjAzhM+r8I0bIk=,tag:amnhTjr9oFlZM4EXMOIi7w==,type:str]
   SECRET_AMCREST2MQTT_AMCREST_PASSWORD: ENC[AES256_GCM,data:gIPi5HE7nlqvGz5Y,iv:v1gthHYNuDXxqeDr5lnaSKkI9edoni0Vp6iqk0wNsfI=,tag:PvSdfRJ7zF2DadZ3WFohMg==,type:str]
-  SECRET_AMCREST2MQTT_AMCREST_HOST: ENC[AES256_GCM,data:n4yZaaAXMNcvopllzQ==,iv:bzxkRKkx+pmqxzt+umzZzZHLKjInu6TglOgZlXEf8pk=,tag:C14dNSB//inv0tIhPkVFWw==,type:str]
+  SECRET_AMCREST2MQTT_AMCREST_HOST: ENC[AES256_GCM,data:K4vrdQxZ+jZpHLg/,iv:XhI6a4FJGxEEBiOV/+R90O2DFkyCZVrw8co7jqF04lc=,tag:yOQU5k0DRX+VkdXzQo6lQw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-07T14:31:24Z"
-  mac: ENC[AES256_GCM,data:o30XSyvJD02oWJqvF0O1mSWsuf3PqgzY/B8HKj5C8iTCiImOZm1nHL+MelKR6Hm4kiMwiuqkhYJtd/IRTJghOdt+uP83zw+P5GoPg/zSJZV7s/N31vcu/vy75SeH9LaDkrcQoPWadRTMjIJn0jLz7QrSosVdpmThfI7KJjSef3E=,iv:HI1ujiiyk7Waoxz/xGdI7HvcjIWlyWdhhgZBzc6x5rM=,tag:IwUe5kUzqPxzSG71U+g1AA==,type:str]
+  lastmodified: "2021-09-16T19:57:15Z"
+  mac: ENC[AES256_GCM,data:HTtGZo+QXvSy2WYjAx/AYulYE4otNMVqR0jfAduyLsNQ6DFudSZ7Pf3L8sbmYgh8VsTTiXhB/NgN2g5Xm+vZmXqG5csbbNCMc/kLashHvTeOIWfi0v25U2dUmJkdxgiSn70+umOxoxk8AXx+KlOJm9VReGU/GsPACc6Rz7uW1Q8=,iv:iaR9uhHj8fqnVPC1KSi4DRZGoALbaXLabhkE63qlOuM=,tag:w2Qypc0D16nw/iyrXtNyCQ==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
