--- a/cluster/apps/network/blocky/helm-release.yaml
+++ b/cluster/apps/network/blocky/helm-release.yaml
@@ -60,11 +60,10 @@ spec:
         externalResolvers:
         #- tcp-tls:${SECRET_NEXTDNS_ID}.dns1.nextdns.io:853
         #- tcp-tls:${SECRET_NEXTDNS_ID}.dns2.nextdns.io:853
-        - https://1.1.1.1/dns-query
+        - tcp-tls:${GATEWAY_IP}
       conditional:
         mapping:
           ${SECRET_DOMAIN}: udp:${GATEWAY_IP}
-          unifi: udp:${GATEWAY_IP}
       blocking:
         blackLists:
           ads:
