need the whitelist file as well

--- a/cluster/apps/network/blocky/kustomization.yaml
+++ b/cluster/apps/network/blocky/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - helm-release.yaml
   - prometheus-rule.yaml
+  - whitelist.txt
 configMapGenerator:
   - name: blocky-whitelist
     files:
