remove the path infront of whitelist file

--- a/cluster/apps/network/blocky/helm-release.yaml
+++ b/cluster/apps/network/blocky/helm-release.yaml
@@ -58,7 +58,7 @@ spec:
     persistence:
       whitelist:
         enabled: true
-        mountPath: /app/whitelists/default
+        mountPath: /app/whitelists
         type: custom
         volumeSpec:
           configMap:
