--- a/cluster/apps/network/blocky/helm-release.yaml
+++ b/cluster/apps/network/blocky/helm-release.yaml
@@ -77,9 +77,9 @@ spec:
           ads:
           # https://oisd.nl/
           - https://raw.githubusercontent.com/ookangzheng/dbl-oisd-nl/master/dbl.txt
-        whiteLists:
-          ads:
-          - https://raw.githubusercontent.com/anudeepND/whitelist/master/domains/whitelist.txt
+        #whiteLists:
+          #ads:
+          #- https://raw.githubusercontent.com/anudeepND/whitelist/master/domains/whitelist.txt
         clientGroupsBlock:
           default:
           - ads
