add settings for mosquitto

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -68,14 +68,15 @@ stringData:
   SECRET_AMCREST2MQTT_AMCREST_USERNAME: ENC[AES256_GCM,data:WngFHsg=,iv:uIIC+tyRQOoI7CEKpLJIphb3EZYCgEjAzhM+r8I0bIk=,tag:amnhTjr9oFlZM4EXMOIi7w==,type:str]
   SECRET_AMCREST2MQTT_AMCREST_PASSWORD: ENC[AES256_GCM,data:gIPi5HE7nlqvGz5Y,iv:v1gthHYNuDXxqeDr5lnaSKkI9edoni0Vp6iqk0wNsfI=,tag:PvSdfRJ7zF2DadZ3WFohMg==,type:str]
   SECRET_AMCREST2MQTT_AMCREST_HOST: ENC[AES256_GCM,data:K4vrdQxZ+jZpHLg/,iv:XhI6a4FJGxEEBiOV/+R90O2DFkyCZVrw8co7jqF04lc=,tag:yOQU5k0DRX+VkdXzQo6lQw==,type:str]
+  SECRET_MOSQUITTO_ADMIN_PASSWORD: ENC[AES256_GCM,data:eRNsSo1sO+BWFcC15Qw/JlHDm/SVybj3,iv:S7WZnJ0AbVHeOiOfyjswBi79ZHwVT6X7segbAGJRNCY=,tag:q97x7i0MRzudbBFfpzKhlg==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-16T19:57:15Z"
-  mac: ENC[AES256_GCM,data:HTtGZo+QXvSy2WYjAx/AYulYE4otNMVqR0jfAduyLsNQ6DFudSZ7Pf3L8sbmYgh8VsTTiXhB/NgN2g5Xm+vZmXqG5csbbNCMc/kLashHvTeOIWfi0v25U2dUmJkdxgiSn70+umOxoxk8AXx+KlOJm9VReGU/GsPACc6Rz7uW1Q8=,iv:iaR9uhHj8fqnVPC1KSi4DRZGoALbaXLabhkE63qlOuM=,tag:w2Qypc0D16nw/iyrXtNyCQ==,type:str]
+  lastmodified: "2021-09-20T20:44:30Z"
+  mac: ENC[AES256_GCM,data:dWQy1xIxxc6mAOklUiZQ7hURdOV9sDwOTkgwKATt/4bc1x34u08B7tDVH+7yZQ56F6Y/faAsK1O7RRgrO5EPCLmO9lC1jBBM0JnPt/k+lj1+blMPKg2U2yk4uQI/7xKOKGWH4N9tB5miSbz9uqUW3cG3zf9H5TLp+hFl1PqB9Hw=,iv:29PvlbJa5veBGj3bFshSn9snXjvm8pwA3WqU/uztt4s=,tag:6aW3Cts3jvibsBKkyoAhqA==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
