--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -10,7 +10,8 @@ data:
   # Service IPs
   SVC_NGINX_ADDRESS: "10.45.10.10"
   SVC_TRAEFIK_ADDRESS: "10.45.20.10"
-  SVC_VERNEMQ_ADDRESS: "10.45.10.11"
+  #SVC_VERNEMQ_ADDRESS: "10.45.10.11"
+  SVC_MOSQUITTO_ADDRESS: "10.45.10.11"
   SVC_GITEA_ADDRESS: "10.45.10.12"
   #SVC_ADGUARD_ADDRESS: "10.45.10.13"
   SVC_BLOCKY_ADDRESS: "10.45.10.13"
