update amcrest to leverage new mqtt broker

--- a/cluster/apps/home/amcrest2mqtt/helm-release.yaml
+++ b/cluster/apps/home/amcrest2mqtt/helm-release.yaml
@@ -29,10 +29,10 @@ spec:
       AMCREST_HOST: ${SECRET_AMCREST2MQTT_AMCREST_HOST}
       AMCREST_USERNAME: ${SECRET_AMCREST2MQTT_AMCREST_USERNAME}
       AMCREST_PASSWORD: ${SECRET_AMCREST2MQTT_AMCREST_PASSWORD}
-      MQTT_HOST: vernemq.home
+      MQTT_HOST: mosquitto.home
       MQTT_PORT: 1883
-      MQTT_USERNAME: nouser
-      MQTT_PASSWORD: nopassword
+      MQTT_USERNAME: admin
+      MQTT_PASSWORD: ${SECRET_MOSQUITTO_ADMIN_PASSWORD}
       HOME_ASSISTANT: "true"
 
     resources:
