change zigbee to mosquitto

--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -54,9 +54,9 @@ spec:
     config:
       mqtt:
         base_topic: zigbee2mqtt
-        server: "mqtt://vernemq"
-        user: nouserneeded
-        password: nopasswordneeded
+        server: "mqtt://mosquitto.home"
+        user: admin
+        password: ${SECRET_MOSQUITTO_ADMIN_PASSWORD}
       homeassistant: false
       device_options:
         retain: true
