add mosquitto password to hass

--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -28,14 +28,15 @@ stringData:
   HASS_SECRET_SP_KEY: ENC[AES256_GCM,data:9DlMXcU2vUfuYAwiQhaM85+AaFk2e+wPgQHsASYg8IN8/brB,iv:iZXG51tyUTWa7l84JETu3jK+3uiAQSrQzvMooRTd2H8=,tag:ujdgEWHJEDUDSnUP6Sz1vQ==,type:str]
   HASS_AMCREST_USERNAME: ENC[AES256_GCM,data:zUfT8oA=,iv:/6T5F+b1+mgORPHo7bJE4VFCO61mB7fgjyNBHaadLjA=,tag:8VPtiOXbySm8AC8NUU3+eg==,type:str]
   HASS_AMCREST_PASSWORD: ENC[AES256_GCM,data:AQ4n7zzX/XGTHgR3,iv:6oEeJz6+7WyNj+2+nLPeIRfztt9fvZlYKV66tt547eI=,tag:44R9I0K7PfWI0Dd+nfZ5UA==,type:str]
+  HASS_MQTT_MOSQUITTO_PASSWORD: ENC[AES256_GCM,data:Cc7W1C/D9q/3uzVqD58H+YO+t74v0+CK,iv:cShGNLqerf/xZVMDQEZvIHZ7PYU8eBVlBJTAbsrUKbs=,tag:6A2JwRYcEHLozL0MQD34aw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-17T14:07:28Z"
-  mac: ENC[AES256_GCM,data:covFVFIzJYThTTCEqdAVe4toDBd/Fw3PY5as36bm71hhdyRPrJ9ypWYPDffzdTDPLATaFvAeQ3ZtFBQEDp3V+7hy2lSkHwdRMv5QSAgwhXVlSlR//k+3g0rLRP80+atK7PhilxUzfNQQ0JztaEvPvlJ4wimGes5kgV7bRCjYO3w=,iv:3FDQ4+qHRMrgvEskhYdwOAlxZs6xT7XyG0OfPCZWTQE=,tag:Up8yVQLy1L7waCmw/ovmIA==,type:str]
+  lastmodified: "2021-09-20T21:10:38Z"
+  mac: ENC[AES256_GCM,data:jxe9kgPyp2sNnEJpNbJBLsvuNLCjACmjf2xP5hNFaX14f930sLDf1jknR5lkmePqQ9aADJ8FDy8a0Fso9JfT/Ah9wDuiwLM7NJ7+RrYnxtauSA6CAsutXcQYkI3b7YTLmwjD8Rl+vkM+W7/RspR4fhuOkI8ZGiSzN8znVLNRQt4=,iv:B1kKZ58N38tcR+1SO9iR3hLprlM/ZuZU6JQLJtBSJuE=,tag:xJ7ahcPmBQWrua0FfteixA==,type:str]
   pgp:
     - created_at: "2021-06-03T18:15:35Z"
       enc: |
