--- a/cluster/apps/network/blocky/helm-release.yaml
+++ b/cluster/apps/network/blocky/helm-release.yaml
@@ -55,14 +55,14 @@ spec:
             protocol: UDP
             targetPort: 53
         externalTrafficPolicy: Local
-    persistence:
-      ads:
-        enabled: true
-        mountPath: /app/whitelists
-        type: custom
-        volumeSpec:
-          configMap:
-            name: blocky-whitelist
+    # persistence:
+    #   ads:
+    #     enabled: true
+    #     mountPath: /app/whitelists
+    #     type: custom
+    #     volumeSpec:
+    #       configMap:
+    #         name: blocky-whitelist
     config: |
       upstream:
         externalResolvers:
@@ -80,6 +80,8 @@ spec:
         whiteLists:
           ads:
           - https://raw.githubusercontent.com/anudeepND/whitelist/master/domains/whitelist.txt
+          - |
+            www.umgc.edu
         clientGroupsBlock:
           default:
           - ads
