that's also deprecated

--- a/cluster/apps/network/blocky/helm-release.yaml
+++ b/cluster/apps/network/blocky/helm-release.yaml
@@ -87,7 +87,7 @@ spec:
           default:
           - ads
       clientLookup:
-        upstream: udp:${GATEWAY_IP}
+        upstream: tcp+udp:${GATEWAY_IP}
       prometheus:
         enable: true
         path: /metrics
