annotation already defined

--- a/cluster/apps/network/unifi/helm-release.yaml
+++ b/cluster/apps/network/unifi/helm-release.yaml
@@ -50,7 +50,7 @@ spec:
         type: LoadBalancer
         annotations:
           coredns.io/hostname: unifi
-          traefik.ingress.kubernetes.io/service.serversscheme: https
+          # traefik.ingress.kubernetes.io/service.serversscheme: https
         externalIPs:
           - 10.45.10.17
         externalTrafficPolicy: Local
