add secrets for RXRESUME

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -69,14 +69,21 @@ stringData:
   SECRET_AMCREST2MQTT_AMCREST_PASSWORD: ENC[AES256_GCM,data:gIPi5HE7nlqvGz5Y,iv:v1gthHYNuDXxqeDr5lnaSKkI9edoni0Vp6iqk0wNsfI=,tag:PvSdfRJ7zF2DadZ3WFohMg==,type:str]
   SECRET_AMCREST2MQTT_AMCREST_HOST: ENC[AES256_GCM,data:K4vrdQxZ+jZpHLg/,iv:XhI6a4FJGxEEBiOV/+R90O2DFkyCZVrw8co7jqF04lc=,tag:yOQU5k0DRX+VkdXzQo6lQw==,type:str]
   SECRET_MOSQUITTO_ADMIN_PASSWORD: ENC[AES256_GCM,data:eRNsSo1sO+BWFcC15Qw/JlHDm/SVybj3,iv:S7WZnJ0AbVHeOiOfyjswBi79ZHwVT6X7segbAGJRNCY=,tag:q97x7i0MRzudbBFfpzKhlg==,type:str]
+  SECRET_RXRESUME_FIREBASE_APIKEY: ENC[AES256_GCM,data:kE4xlCZuYjJtLyx7bDSkBwFeCNc7msug79vg06udd+emcV/qJamN,iv:c9JDmI/O/3XJk+xhBvbBYdVCxt6/tci5E+DG6qKwF7Y=,tag:kIf+HgO2JFrLsFcEcgxlRw==,type:str]
+  SECRET_RXRESUME_FIREBASE_AUTHDOMAIN: ENC[AES256_GCM,data:9afb9feX6qMkQ+3qd8pJwknoB4xkBxuGebkFlQ==,iv:V7LO7aCPHFwKhq0qamhK5qfaTHSxM7xkH+t6rvjNw8c=,tag:vELAjLBTBQpyCFf1yr7dTw==,type:str]
+  SECRET_RXRESUME_FIREBASE_DATABASE_URL: ENC[AES256_GCM,data:F8po9HKF8qtm+8KpHTF1heJuHEVor+mYElIzN2Wp1FqnVH+KMXS9C+TgHTSIpoxW,iv:abZVTtyG8L2v/K9Btidp++pfYc7zDQPrS2bLLPuD18c=,tag:DUMnWX/1RWyYGPlTIZiYrA==,type:str]
+  SECRET_RXRESUME_FIREBASE_PROJECT_ID: ENC[AES256_GCM,data:GMfEeh+Rg7PZzrOZ,iv:lAj34HiSSsusnxXEbl/UODngDLrlvE/+Svtq8kw8y/A=,tag:pOJhgk+51qEWCYy+8FmWzQ==,type:str]
+  SECRET_RXRESUME_FIREBASE_STORAGE_BUCKET: ENC[AES256_GCM,data:OwiP8W/U1A6H+8kB5ycCeWhdfsLJYkuD,iv:1kRFxpiOtHKyj4Jxgw0BCmXGbHQajMiaeZjA8007Grk=,tag:tSgukKScwEEOz8NwwCLrRQ==,type:str]
+  SECRET_RXRESUME_FIREBASE_MESSAGING_SENDER_ID: ENC[AES256_GCM,data:dLTep4u0N2teWiqC,iv:mA/09KhB/x6dhYcOYtqbVzTESaXmZ5/81fM0H+cG1Pc=,tag:Ie+5veVMD84PruoifL2eAw==,type:str]
+  SECRET_RXRESUME_FIREBASE_APP_ID: ENC[AES256_GCM,data:dNKBwvMcgHtV45vet9oVBX6QknOQx8wd3FlzgsmH+Sm4Ogv9lsVvCWg=,iv:YSpMVETdjYQ6uq+Lrzol7b3Bx5TOINqMmO61EbYU0zg=,tag:hF/OAvFapAQBwzp4FLxZww==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-20T20:44:30Z"
-  mac: ENC[AES256_GCM,data:dWQy1xIxxc6mAOklUiZQ7hURdOV9sDwOTkgwKATt/4bc1x34u08B7tDVH+7yZQ56F6Y/faAsK1O7RRgrO5EPCLmO9lC1jBBM0JnPt/k+lj1+blMPKg2U2yk4uQI/7xKOKGWH4N9tB5miSbz9uqUW3cG3zf9H5TLp+hFl1PqB9Hw=,iv:29PvlbJa5veBGj3bFshSn9snXjvm8pwA3WqU/uztt4s=,tag:6aW3Cts3jvibsBKkyoAhqA==,type:str]
+  lastmodified: "2021-09-23T21:05:48Z"
+  mac: ENC[AES256_GCM,data:lTmzJdU82xqJUUJkEq4cryvVLFF4LzgqA845hPFcasvNTqX7J3tNFb1f/D4s319/gLqt8TG0CxniZ9YFClrAUrD9GjFz677gdS9OsuU1U30VihbmAv7hHMmmCnCtn50Y051/crYFzD47t0hT8X2mDFR0aSAczyt85/8skf6ZYQk=,iv:5tSJVHQwKPm+VWszauBGJfYD64kiuU0kXiyy2VGyYc4=,tag:uPCt7jJ8gv24Jj4gU9Cgjw==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
