re-enable joplin, deploy rxresume

--- a/cluster/apps/collab/kustomization.yaml
+++ b/cluster/apps/collab/kustomization.yaml
@@ -7,9 +7,10 @@ resources:
   # - forecastle
   - gitea
   # - openkm
-  # - joplin
+  - joplin
   - littlelink
   - nextcloud
+  - rxresume
   - teedy
   - vikunja
   # - yourls
