--- a/cluster/apps/collab/rxresume/helm-release.yaml
+++ b/cluster/apps/collab/rxresume/helm-release.yaml
@@ -17,17 +17,17 @@ spec:
   values:
     image:
       repository: amruthpillai/reactive-resume
-      tag: latest
+      tag: v1
 
     nameOverride: rxresume
-    env:
-      FIREBASE_APIKEY: ${SECRET_RXRESUME_FIREBASE_APIKEY}
-      FIREBASE_APPID: ${SECRET_RXRESUME_FIREBASE_APP_ID}
-      FIREBASE_AUTHDOMAIN: ${SECRET_RXRESUME_FIREBASE_AUTHDOMAIN}
-      FIREBASE_DATABASEURL: ${SECRET_RXRESUME_FIREBASE_DATABASE_URL}
-      FIREBASE_MESSAGINGSENDERID: ${SECRET_RXRESUME_FIREBASE_MESSAGING_SENDER_ID}
-      FIREBASE_PROJECTID: ${SECRET_RXRESUME_FIREBASE_PROJECT_ID}
-      FIREBASE_STORAGEBUCKET: ${SECRET_RXRESUME_FIREBASE_STORAGE_BUCKET}
+    # env:
+    #   FIREBASE_APIKEY: ${SECRET_RXRESUME_FIREBASE_APIKEY}
+    #   FIREBASE_APPID: ${SECRET_RXRESUME_FIREBASE_APP_ID}
+    #   FIREBASE_AUTHDOMAIN: ${SECRET_RXRESUME_FIREBASE_AUTHDOMAIN}
+    #   FIREBASE_DATABASEURL: ${SECRET_RXRESUME_FIREBASE_DATABASE_URL}
+    #   FIREBASE_MESSAGINGSENDERID: ${SECRET_RXRESUME_FIREBASE_MESSAGING_SENDER_ID}
+    #   FIREBASE_PROJECTID: ${SECRET_RXRESUME_FIREBASE_PROJECT_ID}
+    #   FIREBASE_STORAGEBUCKET: ${SECRET_RXRESUME_FIREBASE_STORAGE_BUCKET}
     service:
       main:
         ports:
