--- a/cluster/apps/media/mylar/helm-release.yaml
+++ b/cluster/apps/media/mylar/helm-release.yaml
@@ -43,7 +43,7 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: mylar-config-pvc
+        existingClaim: mylar-config-pvc-restore
       data:
         enabled: true
         existingClaim: media-nfs-tank-share-pvc
