--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,205 +1,215 @@
 {
-  enabled: true,
-  timezone: "America/New_York",
-  semanticCommits: "enabled",
-  dependencyDashboard: true,
-  dependencyDashboardTitle: "Renovate Dashboard 🤖",
-  commitBody: "Signed-off-by: Ryan Holt <carpenike@users.noreply.github.com>",
-  suppressNotifications: ["prIgnoreNotification"],
-  rebaseWhen: "conflicted",
-  commitMessageTopic: "{{depName}}",
-  commitMessageExtra: "to {{newVersion}}",
-  commitMessageSuffix: "",
+  "enabled": true,
+  "timezone": "America/New_York",
+  "semanticCommits": "enabled",
+  "dependencyDashboard": true,
+  "dependencyDashboardTitle": "Renovate Dashboard 🤖",
+  "commitBody": "Signed-off-by: Ryan Holt <carpenike@users.noreply.github.com>",
+  "suppressNotifications": ["prIgnoreNotification"],
+  "rebaseWhen": "conflicted",
+  "commitMessageTopic": "{{depName}}",
+  "commitMessageExtra": "to {{newVersion}}",
+  "commitMessageSuffix": "",
   // set up Renovate Managers
-  helmv3: {
-    fileMatch: ["charts/.+/Chart\\.yaml$"],
+  "helmv3": {
+    "fileMatch": ["charts/.+/Chart\\.yaml$"]
   },
   "helm-values": {
-    fileMatch: ["cluster/.+/helm-release\\.yaml$"],
+    "fileMatch": ["cluster/.+/helm-release\\.yaml$"]
   },
-  kubernetes: {
-    fileMatch: ["cluster/.+\\.yaml$"],
-    ignorePaths: ["cluster/base/"],
+  "kubernetes": {
+    "fileMatch": [
+      "cluster/.+\\.yaml$",
+      "server/.+\\.yaml$"
+    ],
+    "ignorePaths": [
+      "cluster/base/"
+    ]
   },
-  regexManagers: [
+  "regexManagers": [
     // regexManager to read and process HelmRelease files
     {
-      fileMatch: ["cluster/.+\\.yaml$"],
-      matchStrings: [
-        // helm releases
-        "registryUrl=(?<registryUrl>.*?)\n *chart: (?<depName>.*?)\n *version: (?<currentValue>.*)\n",
+      "fileMatch": [
+        "cluster/.+\\.yaml$"
       ],
-      datasourceTemplate: "helm",
+      "matchStrings": [
+        // helm releases
+        "registryUrl=(?<registryUrl>.*?)\n *chart: (?<depName>.*?)\n *version: (?<currentValue>.*)\n"
+      ],
+      "datasourceTemplate": "helm"
     },
     // regexManager to read and process cert-manager CRD's
     {
-      fileMatch: ["cluster/crds/cert-manager/.+\\.yaml$"],
-      matchStrings: [
-        "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n.*\\/(?<currentValue>.*?)\\/",
+      "fileMatch": [
+        "cluster/crds/cert-manager/.+\\.yaml$"
       ],
-      datasourceTemplate: "helm",
+      "matchStrings": [
+        "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n.*\\/(?<currentValue>.*?)\\/"
+      ],
+      "datasourceTemplate": "helm"
     },
-    // regexManager to read and process kube-prometheus-stack CRD's
+    // regexManager to read and process kube-prometheus-stack and velero CRD's
     {
-      fileMatch: ["cluster/crds/kube-prometheus-stack/.+\\.yaml$"],
-      matchStrings: [
-        "registryUrl=(?<registryUrl>.*?)\n *tag: (?<depName>[a-zA-Z-]+)-(?<currentValue>.*)\n",
+      "fileMatch": [
+        "cluster/crds/kube-prometheus-stack/.+\\.yaml$",
+        "cluster/crds/velero/.+\\.yaml$"
       ],
-      datasourceTemplate: "helm",
+      "matchStrings": [
+        "registryUrl=(?<registryUrl>.*?)\n *tag: (?<depName>[a-zA-Z-]+)-(?<currentValue>.*)\n"
+      ],
+      "datasourceTemplate": "helm"
     },
     // regexManager to read and process Traefik CRD's
     {
-      fileMatch: ["cluster/crds/traefik/.+\\.yaml$"],
-      matchStrings: [
-        "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n *tag: v(?<currentValue>.*)\n",
+      "fileMatch": [
+        "cluster/crds/traefik/.+\\.yaml$"
       ],
-      datasourceTemplate: "helm",
+      "matchStrings": [
+        "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n *tag: v(?<currentValue>.*)\n"
+      ],
+      "datasourceTemplate": "helm"
     },
     // regexManager to read and process Rook-Ceph CRD's
     {
-      fileMatch: ["cluster/crds/rook-ceph/.+\\.yaml$"],
-      matchStrings: [
-        "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n *tag: (?<currentValue>.*)\n",
+      "fileMatch": [
+        "cluster/crds/rook-ceph/.+\\.yaml$"
       ],
-      datasourceTemplate: "helm",
+      "matchStrings": [
+        "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n *tag: (?<currentValue>.*)\n"
+      ],
+      "datasourceTemplate": "helm"
     },
     // regexManager to read and process External Snapshotter and External DNS CRD's
     {
-      fileMatch: [
+      "fileMatch": [
         "cluster/crds/external-snapshotter/.+\\.yaml$",
-        "cluster/crds/external-dns/.+\\.yaml$",
+        "cluster/crds/external-dns/.+\\.yaml$"
       ],
-      matchStrings: [
-        "datasource=(?<datasource>.*?)\n *url: https://github\\.com/(?<depName>.*?)\\.git\n *ref:\n *tag: (?<currentValue>.*)\n",
+      "matchStrings": [
+        "datasource=(?<datasource>.*?)\n *url: https:\/\/github\\.com\/(?<depName>.*?)\\.git\n *ref:\n *tag: (?<currentValue>.*)\n"
       ],
-      datasourceTemplate: "github-releases",
-    },
+      "datasourceTemplate": "github-releases"
+    }
   ],
-  packageRules: [
+  "packageRules": [
     // setup datasources
     {
-      matchDatasources: ["helm"],
-      semanticCommitScope: "charts",
-      separateMinorPatch: true,
-      ignoreDeprecated: true,
+      "matchDatasources": ["helm"],
+      "semanticCommitScope": "charts",
+      "separateMinorPatch": true,
+      "ignoreDeprecated": true
     },
     {
-      matchDatasources: ["docker"],
-      enabled: true,
-      matchUpdateTypes: ["major", "minor", "patch"],
+      "matchDatasources": ["docker"],
+      "enabled": true,
+      "matchUpdateTypes": ["major", "minor", "patch"]
     },
     {
-      matchDatasources: ["docker"],
-      semanticCommitScope: "images",
-      separateMinorPatch: true,
+      "matchDatasources": ["docker"],
+      "semanticCommitScope": "images",
+      "separateMinorPatch": true
     },
     // add labels according to package and update types
     {
-      matchDatasources: ["docker"],
-      matchUpdateTypes: ["major"],
-      commitMessagePrefix: "feat(images)!: ",
-      labels: ["renovate/image", "dep/major"],
+      "matchDatasources": ["docker"],
+      "matchUpdateTypes": ["major"],
+      "commitMessagePrefix": "feat(images)!: ",
+      "labels": ["renovate/image", "dep/major"]
     },
     {
-      matchDatasources: ["docker"],
-      matchUpdateTypes: ["minor"],
-      semanticCommitType: "feat",
-      labels: ["renovate/image", "dep/minor"],
+      "matchDatasources": ["docker"],
+      "matchUpdateTypes": ["minor"],
+      "semanticCommitType": "feat",
+      "labels": ["renovate/image", "dep/minor"]
     },
     {
-      matchDatasources: ["docker"],
-      matchUpdateTypes: ["patch"],
-      semanticCommitType: "fix",
-      labels: ["renovate/image", "dep/patch"],
+      "matchDatasources": ["docker"],
+      "matchUpdateTypes": ["patch"],
+      "semanticCommitType": "fix",
+      "labels": ["renovate/image", "dep/patch"]
     },
     {
-      matchDatasources: ["helm"],
-      matchUpdateTypes: ["major"],
-      commitMessagePrefix: "feat(charts)!: ",
-      labels: ["renovate/helm", "dep/major"],
+      "matchDatasources": ["helm"],
+      "matchUpdateTypes": ["major"],
+      "commitMessagePrefix": "feat(charts)!: ",
+      "labels": ["renovate/helm", "dep/major"]
     },
     {
-      matchDatasources: ["helm"],
-      matchUpdateTypes: ["minor"],
-      semanticCommitType: "feat",
-      labels: ["renovate/helm", "dep/minor"],
+      "matchDatasources": ["helm"],
+      "matchUpdateTypes": ["minor"],
+      "semanticCommitType": "feat",
+      "labels": ["renovate/helm", "dep/minor"]
     },
     {
-      matchDatasources: ["helm"],
-      matchUpdateTypes: ["patch"],
-      semanticCommitType: "fix",
-      labels: ["renovate/helm", "dep/patch"],
+      "matchDatasources": ["helm"],
+      "matchUpdateTypes": ["patch"],
+      "semanticCommitType": "fix",
+      "labels": ["renovate/helm", "dep/patch"]
     },
     // custom version schemes
     {
-      matchDatasources: ["docker"],
-      versioning: "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)$",
-      matchPackageNames: ["blakeblackshear/frigate"],
+      "matchDatasources": ["docker"],
+      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)$",
+      "matchPackageNames": ["blakeblackshear/frigate"]
     },
     {
-      matchDatasources: ["docker"],
-      versioning: "regex:^RELEASE\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z(-(?<compatibility>.*))?$",
-      matchPackageNames: ["minio/minio"],
+      "matchDatasources": ["docker"],
+      "versioning": "regex:^RELEASE\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z(-(?<compatibility>.*))?$",
+      "matchPackageNames": ["docker.io/minio/minio"]
     },
     // pin package versions
     {
-      matchDatasources: ["docker"],
-      allowedVersions: "<13",
-      matchPackageNames: ["postgres", "prodrigestivill/postgres-backup-local"],
-    },
-    {
-      matchDatasources: ["docker"],
-      allowedVersions: "<2",
-      matchPackageNames: ["influxdb"],
+      "matchDatasources": ["docker"],
+      "allowedVersions": "<13",
+      "matchPackageNames": [
+        "docker.io/library/postgres"
+      ]
     },
     // version strategies
     {
-      matchDatasources: ["docker"],
-      versioning: "loose",
-      matchPackageNames: [
+      "matchDatasources": ["docker"],
+      "versioning": "loose",
+      "matchPackageNames": [
         "ghcr.io/k8s-at-home/plex",
-        "ghcr.io/k8s-at-home/qbittorrent",
-      ],
+        "ghcr.io/k8s-at-home/qbittorrent"
+      ]
     },
     // enable auto-merge
     {
-      matchDatasources: ["docker"],
-      automerge: true,
-      automergeType: "branch",
-      requiredStatusChecks: null,
-      matchUpdateTypes: ["minor", "patch"],
-      matchPackageNames: [
+      "matchDatasources": ["docker"],
+      "automerge": true,
+      "automergeType": "branch",
+      "requiredStatusChecks": null,
+      "matchUpdateTypes": ["minor", "patch"],
+      "matchPackageNames": [
         "ghcr.io/k8s-at-home/jackett",
-        "ghcr.io/k8s-at-home/prowlarr-nightly",
-      ],
+        "ghcr.io/k8s-at-home/prowlarr-nightly"
+     ]
     },
     // group packages
     {
-      matchDatasources: ["helm", "docker"],
-      matchPackagePatterns: ["^rook.ceph"],
-      groupName: "rook-ceph-suite",
-      additionalBranchPrefix: "",
-      separateMinorPatch: true,
+      "matchDatasources": ["helm", "docker"],
+      "matchPackagePatterns": ["^rook.ceph"],
+      "groupName": "rook-ceph-suite",
+      "additionalBranchPrefix": "",
+      "separateMinorPatch": true
     },
     {
-      matchDatasources: ["github-releases", "docker"],
-      matchPackagePatterns: ["external-dns"],
-      groupName: "external-dns-suite",
-      additionalBranchPrefix: "",
-      separateMinorPatch: true,
+      "matchDatasources": ["github-releases", "docker"],
+      "matchPackagePatterns": [
+        "external-snapshotter",
+        "snapshot-controller"
+      ],
+      "groupName": "external-snapshotter-suite",
+      "additionalBranchPrefix": "",
+      "separateMinorPatch": true
     },
     {
-      matchDatasources: ["github-releases", "docker"],
-      matchPackagePatterns: ["external-snapshotter"],
-      groupName: "external-snapshotter-suite",
-      additionalBranchPrefix: "",
-      separateMinorPatch: true,
-    },
-    {
-      matchPackageNames: ["system-upgrade-controller"],
-      groupName: "system-upgrade-controller-suite",
-      additionalBranchPrefix: "",
-      separateMinorPatch: true,
-    },
-  ],
+      "matchDatasources": ["github-tags", "docker"],
+      "matchPackagePatterns": ["rancher/system-upgrade-controller"],
+      "groupName": "system-upgrade-controller-suite",
+      "additionalBranchPrefix": "",
+      "separateMinorPatch": true
+    }
+  ]
 }
