--- a/cluster/apps/network/echo-server/helm-release.yaml
+++ b/cluster/apps/network/echo-server/helm-release.yaml
@@ -27,9 +27,9 @@ spec:
       annotations:
         kubernetes.io/ingress.class: traefik
         cert-manager.io/cluster-issuer: letsencrypt-production
-        external-dns.alpha.kubernetes.io/target: ingress.${SECRET_DOMAIN}
+        external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
         traefik.ingress.kubernetes.io/router.entrypoints: websecure
-        traefik.ingress.kubernetes.io/router.middlewares: system-security-ak-outpost-traefik-auth@kubernetescrd,system-ingress-rfc1918-ips@kubernetescrd
+        traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
 
       hosts:
         - host: echo-server.${SECRET_DOMAIN}
