forgot one copy pasta

--- a/.github/workflows/flux-upgrade-schedule.yaml
+++ b/.github/workflows/flux-upgrade-schedule.yaml
@@ -28,9 +28,9 @@ jobs:
           delete-branch: true
           title: "chore(deps): upgrade flux components to ${{ steps.upgrade.outputs.flux_version }}"
           signoff: true
-          committer: "Devin Buhl <onedr0p@users.noreply.github.com>"
-          author: "Devin Buhl <onedr0p@users.noreply.github.com>"
-          assignees: "onedr0p"
+          committer: "Ryan Holt <carpenike@users.noreply.github.com>"
+          author: "Ryan Holt <carpenike@users.noreply.github.com>"
+          assignees: "carpenike"
           commit-message: "chore(deps): upgrade flux components to ${{ steps.upgrade.outputs.flux_version }}"
           body: |
             Release notes: https://github.com/fluxcd/flux2/releases/tag/${{ steps.upgrade.outputs.flux_version }}
