--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -76,14 +76,15 @@ stringData:
   SECRET_RXRESUME_FIREBASE_STORAGE_BUCKET: ENC[AES256_GCM,data:OwiP8W/U1A6H+8kB5ycCeWhdfsLJYkuD,iv:1kRFxpiOtHKyj4Jxgw0BCmXGbHQajMiaeZjA8007Grk=,tag:tSgukKScwEEOz8NwwCLrRQ==,type:str]
   SECRET_RXRESUME_FIREBASE_MESSAGING_SENDER_ID: ENC[AES256_GCM,data:dLTep4u0N2teWiqC,iv:mA/09KhB/x6dhYcOYtqbVzTESaXmZ5/81fM0H+cG1Pc=,tag:Ie+5veVMD84PruoifL2eAw==,type:str]
   SECRET_RXRESUME_FIREBASE_APP_ID: ENC[AES256_GCM,data:dNKBwvMcgHtV45vet9oVBX6QknOQx8wd3FlzgsmH+Sm4Ogv9lsVvCWg=,iv:YSpMVETdjYQ6uq+Lrzol7b3Bx5TOINqMmO61EbYU0zg=,tag:hF/OAvFapAQBwzp4FLxZww==,type:str]
+  SECRET_CLOUDFLARE_DYNDNS_TOKEN: ENC[AES256_GCM,data:Jc2yTzlwVf6Gs6UAaE8Ff+M8Bixid9f4QItMXQOfvoQlCAPRq6cmDg==,iv:xIruwFjCbJqXPJHHSSzyVHSfE9LqtqsPOB2P9m6iVXY=,tag:IcTCTVTz7h+JW9oI/2y7CA==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-23T21:05:48Z"
-  mac: ENC[AES256_GCM,data:lTmzJdU82xqJUUJkEq4cryvVLFF4LzgqA845hPFcasvNTqX7J3tNFb1f/D4s319/gLqt8TG0CxniZ9YFClrAUrD9GjFz677gdS9OsuU1U30VihbmAv7hHMmmCnCtn50Y051/crYFzD47t0hT8X2mDFR0aSAczyt85/8skf6ZYQk=,iv:5tSJVHQwKPm+VWszauBGJfYD64kiuU0kXiyy2VGyYc4=,tag:uPCt7jJ8gv24Jj4gU9Cgjw==,type:str]
+  lastmodified: "2021-09-27T17:47:06Z"
+  mac: ENC[AES256_GCM,data:MY72eNDdJ9p2QOOUUUaQ8vec8SpRCiquOUQSxbz5t87mdDBFetsQ5fE3O4+aaD+0pMBvOp5W1dpwFeMXPUVECwr69EWtLSQdW6d7wv2qinDbpagWX/P7ptfs40feKQWUa5EcJIaWADJFhClqTDxoG+RqAFfAeA63kuE4t0uvmhc=,iv:E2ddBY+wC00qD92TEl3+yq+MUZxYlX5rwaZVXWdH22Y=,tag:UZajXUUFULlrYLIB+ZYemQ==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
