--- a/cluster/apps/network/kustomization.yaml
+++ b/cluster/apps/network/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   # - adguard
   - blocky
   - certificates
-  # - cloudflare-ddns
+  - cloudflare-ddns
   - echo-server
   - error-pages
   - external-dns
