roll out goldilocks

--- a/cluster/apps/kube-system/kustomization.yaml
+++ b/cluster/apps/kube-system/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - _pvc
   - descheduler
+  - goldilocks
   - kube-cleanup-operator
   - metrics-server
   # - nginx
