--- a/cluster/core/namespaces/monitoring.yaml
+++ b/cluster/core/namespaces/monitoring.yaml
@@ -4,4 +4,4 @@ kind: Namespace
 metadata:
   name: monitoring
   labels:
-    istio-injection: disabled
+    goldilocks.fairwinds.com/enabled: "true"
