--- a/cluster/core/namespaces/tools.yaml
+++ b/cluster/core/namespaces/tools.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: security
+  name: tools
   labels:
     goldilocks.fairwinds.com/enabled: "true"
