--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -122,7 +122,7 @@ spec:
             retain:
               default: 14
           zones:
-            patio:
+            backyard:
               coordinates: 640,0,640,360,0,360,0,0
 
         frontdoor:
