--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -29,14 +29,16 @@ stringData:
   HASS_AMCREST_USERNAME: ENC[AES256_GCM,data:zUfT8oA=,iv:/6T5F+b1+mgORPHo7bJE4VFCO61mB7fgjyNBHaadLjA=,tag:8VPtiOXbySm8AC8NUU3+eg==,type:str]
   HASS_AMCREST_PASSWORD: ENC[AES256_GCM,data:AQ4n7zzX/XGTHgR3,iv:6oEeJz6+7WyNj+2+nLPeIRfztt9fvZlYKV66tt547eI=,tag:44R9I0K7PfWI0Dd+nfZ5UA==,type:str]
   HASS_MQTT_MOSQUITTO_PASSWORD: ENC[AES256_GCM,data:Cc7W1C/D9q/3uzVqD58H+YO+t74v0+CK,iv:cShGNLqerf/xZVMDQEZvIHZ7PYU8eBVlBJTAbsrUKbs=,tag:6A2JwRYcEHLozL0MQD34aw==,type:str]
+  HASS_SECRET_NONA_LONGITUDE: ENC[AES256_GCM,data:vslVwCykuyKelA==,iv:ncqOZjRl4VMF8e3ea1SPfOv1QDO7qW4jHxcEART+jZY=,tag:mI7P8RTLntRQn2ugG6BCaA==,type:str]
+  HASS_SECRET_NONA_LATITUDE: ENC[AES256_GCM,data:osJP1Jy8J/q8,iv:BuqNQjgkgDpSy8R3K288pJZ3UDZDt462RandXYGDty8=,tag:i+FzL9dz3rLvnJlJImF3/Q==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-20T21:10:38Z"
-  mac: ENC[AES256_GCM,data:jxe9kgPyp2sNnEJpNbJBLsvuNLCjACmjf2xP5hNFaX14f930sLDf1jknR5lkmePqQ9aADJ8FDy8a0Fso9JfT/Ah9wDuiwLM7NJ7+RrYnxtauSA6CAsutXcQYkI3b7YTLmwjD8Rl+vkM+W7/RspR4fhuOkI8ZGiSzN8znVLNRQt4=,iv:B1kKZ58N38tcR+1SO9iR3hLprlM/ZuZU6JQLJtBSJuE=,tag:xJ7ahcPmBQWrua0FfteixA==,type:str]
+  lastmodified: "2021-09-29T13:12:47Z"
+  mac: ENC[AES256_GCM,data:XUWOdKZ0tujGLCyoWIXdqBMaCljqkAh+FiFhVMB0NivmX7/iNuMFSHBX2rjjZt931YnoGNNLyWF6HFpYV4lmGwUnxsxdXqN+SFlsC+ZERRp8pBIGzNb/PCX4jZ1SQ7p1qr+VpGjK1RhjqcW5849hzXXYNPFs0ZI6FesdwHInww0=,iv:0bPtsgm7h/3kNn1r+NZk/Oo9B/VO6uMWHZJT36vz1RE=,tag:00tKnKzholcH1sLeDY+7gg==,type:str]
   pgp:
     - created_at: "2021-06-03T18:15:35Z"
       enc: |
