add securityContext User to job def

--- a/cluster/apps/mail/mailbackup/cronjob.yaml
+++ b/cluster/apps/mail/mailbackup/cronjob.yaml
@@ -14,6 +14,7 @@ spec:
       template:
         spec:
           securityContext:
+            runAsUser: 1000
             supplementalGroups:
               - 1000
           containers:
