--- a/cluster/apps/mail/mailbackup/cronjob.yaml
+++ b/cluster/apps/mail/mailbackup/cronjob.yaml
@@ -18,7 +18,7 @@ spec:
             supplementalGroups:
               - 1000
           containers:
-            - name: mailbackup-2020
+            - name: mailbackup
               image: ghcr.io/k8s-at-home/getmail:v6.18.4
               imagePullPolicy: IfNotPresent
               env:
