add icloud password

--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -31,14 +31,15 @@ stringData:
   HASS_MQTT_MOSQUITTO_PASSWORD: ENC[AES256_GCM,data:Cc7W1C/D9q/3uzVqD58H+YO+t74v0+CK,iv:cShGNLqerf/xZVMDQEZvIHZ7PYU8eBVlBJTAbsrUKbs=,tag:6A2JwRYcEHLozL0MQD34aw==,type:str]
   HASS_SECRET_NONA_LONGITUDE: ENC[AES256_GCM,data:vslVwCykuyKelA==,iv:ncqOZjRl4VMF8e3ea1SPfOv1QDO7qW4jHxcEART+jZY=,tag:mI7P8RTLntRQn2ugG6BCaA==,type:str]
   HASS_SECRET_NONA_LATITUDE: ENC[AES256_GCM,data:osJP1Jy8J/q8,iv:BuqNQjgkgDpSy8R3K288pJZ3UDZDt462RandXYGDty8=,tag:i+FzL9dz3rLvnJlJImF3/Q==,type:str]
+  HASS_SECRET_ICLOUD_PASSWORD: ENC[AES256_GCM,data:+hUh9uIM3/qSp/MQndVvMzo//A==,iv:Aj7fhAUSVSTME3NpDVBGdhSWlfziKxGyg18B/649YyI=,tag:pj8yjpGtK4TA2fkBYTPqAQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-29T13:12:47Z"
-  mac: ENC[AES256_GCM,data:XUWOdKZ0tujGLCyoWIXdqBMaCljqkAh+FiFhVMB0NivmX7/iNuMFSHBX2rjjZt931YnoGNNLyWF6HFpYV4lmGwUnxsxdXqN+SFlsC+ZERRp8pBIGzNb/PCX4jZ1SQ7p1qr+VpGjK1RhjqcW5849hzXXYNPFs0ZI6FesdwHInww0=,iv:0bPtsgm7h/3kNn1r+NZk/Oo9B/VO6uMWHZJT36vz1RE=,tag:00tKnKzholcH1sLeDY+7gg==,type:str]
+  lastmodified: "2021-10-01T13:40:03Z"
+  mac: ENC[AES256_GCM,data:53ewfyS9K4PNaZbV4JCxYWxfoNzmvum5Tkikr+mHUo8TCvrSUCsbQA4NLurNgmij0Frs+KVJnInhgRWmjShskq4Ae6JaXsir++3xMEt4p7Hdbn/iCjml3TkHtMhSZGX6HeHieSOVZ+I7fyYgkHWspXxyt+VdbrDcfd8uX0FThco=,iv:nXkQiGgkDpN7+ZSVe64Wa+G7ptkllRMq3IBg8/SSnM0=,tag:ON8TwRWXHZoD2c12WIn0lg==,type:str]
   pgp:
     - created_at: "2021-06-03T18:15:35Z"
       enc: |
