add username to secrets

--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -32,14 +32,15 @@ stringData:
   HASS_SECRET_NONA_LONGITUDE: ENC[AES256_GCM,data:vslVwCykuyKelA==,iv:ncqOZjRl4VMF8e3ea1SPfOv1QDO7qW4jHxcEART+jZY=,tag:mI7P8RTLntRQn2ugG6BCaA==,type:str]
   HASS_SECRET_NONA_LATITUDE: ENC[AES256_GCM,data:osJP1Jy8J/q8,iv:BuqNQjgkgDpSy8R3K288pJZ3UDZDt462RandXYGDty8=,tag:i+FzL9dz3rLvnJlJImF3/Q==,type:str]
   HASS_SECRET_ICLOUD_PASSWORD: ENC[AES256_GCM,data:+hUh9uIM3/qSp/MQndVvMzo//A==,iv:Aj7fhAUSVSTME3NpDVBGdhSWlfziKxGyg18B/649YyI=,tag:pj8yjpGtK4TA2fkBYTPqAQ==,type:str]
+  HASS_SECRET_ICLOUD_USERNAME: ENC[AES256_GCM,data:KD9kGf/ivsYALTxAnVx+Lis=,iv:tv6YU+uT//iv2TXZ7w6suCKCJXiP1zFKKUoLNVR29mg=,tag:QtlG4vTGgJUtWyChXoprhw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-10-01T13:40:03Z"
-  mac: ENC[AES256_GCM,data:53ewfyS9K4PNaZbV4JCxYWxfoNzmvum5Tkikr+mHUo8TCvrSUCsbQA4NLurNgmij0Frs+KVJnInhgRWmjShskq4Ae6JaXsir++3xMEt4p7Hdbn/iCjml3TkHtMhSZGX6HeHieSOVZ+I7fyYgkHWspXxyt+VdbrDcfd8uX0FThco=,iv:nXkQiGgkDpN7+ZSVe64Wa+G7ptkllRMq3IBg8/SSnM0=,tag:ON8TwRWXHZoD2c12WIn0lg==,type:str]
+  lastmodified: "2021-10-01T13:41:08Z"
+  mac: ENC[AES256_GCM,data:hl3ldXIRF6xoIw5Lez/3zhgTyNafzuWuJKDhTZ5U90vAjtiZtOut2BnA2jEfmEc6tuu7qn25lDHPLjU/i7vkCoFKOGpX0t8OMd6gi5ZctbigfjyzaP9/Qrewj35crCCXWIjXkLxwuO3jCVmO5DnpwfN3D7w6N0s1sFTDotfV2W4=,iv:n1CKYRzPIYD55bAXJyyLXgkz2T3UMXapjl0dUb8M9vY=,tag:4gVEs0ECX0/SOk2LXp1HBw==,type:str]
   pgp:
     - created_at: "2021-06-03T18:15:35Z"
       enc: |
