--- a/cluster/apps/mail/protonmail-bridge/kustomization.yaml
+++ b/cluster/apps/mail/protonmail-bridge/kustomization.yaml
@@ -2,7 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - mailu
-  - mailbackup
-  # - mta-sts
-  - protonmail-bridge
+  - config-pvc.yaml
+  - helm-release.yaml
