--- a/cluster/apps/mail/kustomization.yaml
+++ b/cluster/apps/mail/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - mailu
+  - mailu
   - mailbackup
   # - mta-sts
   - protonmail-bridge
