--- a/cluster/apps/mail/mta-sts/helm-release.yaml
+++ b/cluster/apps/mail/mta-sts/helm-release.yaml
@@ -8,29 +8,51 @@ spec:
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://charts.bitnami.com/bitnami
-      chart: nginx
-      version: 9.5.5
+      chart: /charts/kah-common/
       sourceRef:
-        kind: HelmRepository
-        name: bitnami-charts
+        kind: GitRepository
+        name: flux-system
         namespace: flux-system
       interval: 5m
+  dependsOn:
+    - name: traefik
+      namespace: network
   values:
-    nameOverride: mta-sts
-    fullNameOverride: mta-sts
     image:
-      registry: docker.io
-      image: bitnami/nginx
+      repository: joseluisq/static-web-server
+      tag: 2.0.3-alpine
+    controller:
+      replicas: 3
+    nameOverride: mta-sts
+    env:
+      TEMPLATE_NAME: hacker-terminal
+    service:
+      main:
+        ports:
+          http:
+            port: 80
     ingress:
-      enabled: true
-      certManager: true
-      hostname: mta-sts.holthome.net
-      tls: true
-      annotations:
-        kubernetes.io/ingress.class: traefik
-        cert-manager.io/cluster-issuer: letsencrypt-production
-        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-        external-dns/is-public: "true"
-        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-    staticSiteConfigMap: mta-sts
+      main:
+        enabled: true
+        ingressClassName: "traefik"
+        annotations:
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+        hosts:
+          - host: "mta-sts.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - secretName: mta-sts-cert
+            hosts:
+              - "mta-sts.${SECRET_DOMAIN}"
+    resources:
+      requests:
+        memory: 100Mi
+        cpu: 100m
+      limits:
+        memory: 500Mi
