--- a/cluster/apps/mail/mta-sts/helm-release.yaml
+++ b/cluster/apps/mail/mta-sts/helm-release.yaml
@@ -25,7 +25,8 @@ spec:
       replicas: 3
     nameOverride: mta-sts
     env:
-      TEMPLATE_NAME: hacker-terminal
+      SERVER_PORT: 80
+      SERVER_ROOT: /public
     service:
       main:
         ports:
@@ -50,6 +51,14 @@ spec:
           - secretName: mta-sts-cert
             hosts:
               - "mta-sts.${SECRET_DOMAIN}"
+    persistence:
+      config:
+        enabled: true
+        type: custom
+        mountPath: /public/.well-known/mta-sts.txt
+        volumeSpec:
+          configMap:
+            name: mta-sts
     resources:
       requests:
         memory: 100Mi
