use the secret domain value instead

--- a/cluster/apps/mail/mta-sts/mta-sts-configmap.yaml
+++ b/cluster/apps/mail/mta-sts/mta-sts-configmap.yaml
@@ -8,7 +8,7 @@ data:
   mta-sts.txt: |
     version: STSv1
     mode: enforce
-    mx: rn-00.holthome.net
-    mx: *.holthome.net
+    mx: rn-00.${SECRET_DOMAIN}
+    mx: *.${SECRET_DOMAIN}
     max_age: 10368000
-    
+
