add nas minio secret

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -9,6 +9,8 @@ stringData:
   SECRET_SHORT_DOMAIN: ENC[AES256_GCM,data:0wxiMizt7w==,iv:73+CAlJctbFcquQ7RZTyxNTiWMH/wk1q4PjKKOIYGWQ=,tag:1IkIrPPwQC7PAA32W3Qcew==,type:str]
   SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:fiLCXhPnYq5KjAeB,iv:0010dUNU0JwYX80YCOrJYoj2MEuxtMrWvdxW9rSvCOA=,tag:vnIFNapIypZAoRcgYL4XVw==,type:str]
   SECRET_EMAIL: ENC[AES256_GCM,data:6V6TB94qSRABzlWnP2b2ozA=,iv:/z0uOCglc5lfpbbyyybQGbfb9i8plI5fjlKMfNIJMJA=,tag:wEvuvDwf4il1QJvsqXPerA==,type:str]
+  SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:rfUx9j4Kvjyo2g==,iv:W8pvEnf7rBEdTqmKndCOWyidtmPJQcg4hH7+nQI/FdM=,tag:mVlpybQ33k/RqkTHVMuNNQ==,type:str]
+  SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:onNAvK0NuRnwcA==,iv:qukLHdqZN5AJP4HJ5s0N+G2zwdFsUklJiGwv640SkzA=,tag:QkXCXdMpLXnYeqrAZKB14A==,type:str]
   SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:GhlAUKKQZi8PVzfH7+NCNrrtgco9redOBVWqt32WeaojRthq0FV1KjwbR+9L8NgsYIIHws9cEPkeXzcYiMW2CbyzYM37tLSJhQ/4Mt7zrK4tfGOn65ak3XxdzVR0f5dO4N7utld6mtCE+UqkMJovDWaI5D0Yo3Bx0P0uodqn,iv:g/hYI+iXdsJkdfbZpAFmfE2WVHZv238kIlAAOp5euNI=,tag:6Hw2V0gaEa1rauqC26T44A==,type:str]
   SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:KDDYtNQc6WrUe/3ZoCRab89nPIcqdWw0EcApQRzh9ER5KXXF7gQhXzCJuVmvLoF+,iv:KWDPQjNg3wc2QiUJafTHwVikwxOjcSHGSkBXkM1Niu0=,tag:3Wy8FBNda2LdyfiFXCcbaw==,type:str]
   SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:PSPtzb1eIzUnRtoAumI=,iv:HaJPQ/o4SM4g9a9HZ9fLhv8Ypj55IRrsiprU+SMH7II=,tag:EOGk2vx3BV4bn+tnaqJR6A==,type:str]
@@ -83,8 +85,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-27T17:47:06Z"
-  mac: ENC[AES256_GCM,data:MY72eNDdJ9p2QOOUUUaQ8vec8SpRCiquOUQSxbz5t87mdDBFetsQ5fE3O4+aaD+0pMBvOp5W1dpwFeMXPUVECwr69EWtLSQdW6d7wv2qinDbpagWX/P7ptfs40feKQWUa5EcJIaWADJFhClqTDxoG+RqAFfAeA63kuE4t0uvmhc=,iv:E2ddBY+wC00qD92TEl3+yq+MUZxYlX5rwaZVXWdH22Y=,tag:UZajXUUFULlrYLIB+ZYemQ==,type:str]
+  lastmodified: "2021-10-04T13:17:09Z"
+  mac: ENC[AES256_GCM,data:f6NKvtvrIy1knjF6PZiw8/0m3iSQT8YIKEn4NW9VtX+HWj2NlpW9iaE0DR+f56SxH+7hmQr37m+RuAMUiTUu5mJgP9gXonKFdnW1LNbCaaANv3VFytGu462TvjdV2ry/fkVxPS58BXgCAfvMJofoJ5zZAkxgXweODu5xLusho0Y=,iv:fgbkuYbRg1V9DlVr0EERFtiKiAE77e8at81sUXJor2Q=,tag:rT7W25VKJdlR+TxpReZ3vA==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
