try with both annotations

--- a/cluster/apps/mail/mailu/helm-release.yaml
+++ b/cluster/apps/mail/mailu/helm-release.yaml
@@ -20,6 +20,7 @@ spec:
     admin:
       podAnnotations:
         backup-volumes: "data"
+        velero-backup: "true"
     certmanager:
       issuerName: letsencrypt-production
     domain: "${SECRET_DOMAIN}"
